@@ -57,7 +57,11 @@ tasks.test {
 }
 
 tasks.withType<KotlinCompile> {
-    kotlinOptions.jvmTarget = "11"
+    kotlinOptions.jvmTarget = "17"
+}
+
+tasks.withType<GroovyCompile> {
+    targetCompatibility = "17"
 }
 
 application {
@@ -66,7 +70,6 @@ application {
         "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
         "--add-opens", "java.base/java.nio=ALL-UNNAMED",
         "-Dio.netty.tryReflectionSetAccessible=true",
-        "--illegal-access=deny"
     )
 }
 
